--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <br>Consumo mensal [kWh]: <input type="text" id="consumo" ></br>
-    <br>Irradiação | Horas de Sol Pleno: <input type="text" id="hsp"></br>
+    <br>Irradiação | Horas de Sol Pleno [kWh/m².dia]: <input type="text" id="hsp"></br>
     <br><button class="btn btn-info btn-responsive" onclick="getInputs()">Enviar</button> </br>
     <div class="print" id = "resultado">
       <!-- aqui vai o resultado do dimensionamento -->
