--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <title>TCC Projeto Fotovoltaico</title>
   </head>
-  <body>
-    <div class="container">
+  <body class="container-fluid">
       <img src="imagens/labsolar.jpg" class="img-responsive" alt="labsolarLogo">
       <br>
       <div class="row">
@@ -293,7 +292,6 @@
           </div>
         </div>
       </div>
-    </div>
   </body>
   <style>
     button.res {
